fixing jupyter notebook on mobile

--- a/themes/ghostdance/assets/css/ipynb-custom.css
+++ b/themes/ghostdance/assets/css/ipynb-custom.css
@@ -9,3 +9,8 @@ div#notebook {
 div.inner_cell {
 	flex: none !important;
 }
+
+
+div.output_subarea {
+	flex: none !important;
+}
